<resources>
    <string name="app_name">ToyTrade</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="email">Электронная почта</string>
    <string name="search">Поиск</string>
    <string name="my_toys">Мои игрушки</string>
    <string name="my_changes">Мои обмены</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_toys_up">Мои игрушки</string>
    <string name="moon_cal">29 февраля - 20-й лунный день, убывающая Луна. Организм не силён, можно потратить много времени на лечение, если вдруг заболеете</string>
    <string name="active_toys">Активные игрушки</string>
    <string name="archive">Архив</string>
    <string name="my_changes_up">Мои обмены</string>
    <string name="exchange_requests">Заявки на обмен</string>
    <string name="completed_exchanges">Завершенные обмены</string>
    <string name="my_profile_up">Мой профиль</string>
    <string name="addresses">Адреса</string>
    <string name="address_example">Красноярск, ул.Борисова 3</string>
    <string name="exit">Выйти</string>
    <string name="add">Добавить</string>
    <string name="toy">Игрушка</string>
    <string name="date_29_02_2024">29.02.2024</string>
    <string name="username">Имя пользователя</string>
    <string name="characteristics">Характеристики</string>
    <string name="condition">Состояние:</string>
    <string name="condition_by">Б/у</string>
    <string name="category">Категория:</string>
    <string name="category_teddy">Мягкие игрушки</string>
    <string name="age">Возрастная категория:</string>
    <string name="age_3">3+</string>
    <string name="to_change">Обменяться</string>
    <string name="description">Описание</string>
    <string name="description_example">Медведь мягкий плюшевый в зеленом свитере. Текст описания Текст описания Текст описания Текст описания Текст описания Текст описания Текст описания Текст описания Текст описания</string>
    <string name="preferences">Предпочтения обмена</string>
    <string name="preferences_example">Машинки, погремушки, попыт</string>
    <string name="toys">Игрушки</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="email_example">usermail@gmail.com</string>
    <string name="phone_example">89134567890</string>
    <string name="add_address">Добавить адрес</string>
    <string name="save">Сохранить</string>
    <string name="title">Название</string>
    <string name="photo">Фото</string>
    <string name="address">Адрес</string>
    <string name="toy_example">Медведь мягкий</string>
    <string name="date_example">29 февраля, 19:43</string>
    <string name="ask_for_change">Запросить обмен</string>
    <string name="holiday">Holiday</string>

</resources>