<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/profileSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNameValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:padding="8dp"
            android:inputType="text"
            android:text="@string/username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editPhotoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhotoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/changePhotoImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/photo" />
        </LinearLayout>

        <TextView
            android:id="@+id/editEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmailValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:padding="8dp"
            android:inputType="textEmailAddress"
            android:text="@string/email_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editPhoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPhoneValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="phone"
            android:padding="8dp"
            android:text="@string/phone_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addresses"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/userEditAddressesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

        </LinearLayout>

        <Button
            android:id="@+id/addAddressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/add_address"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/profileSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>